cmake_minimum_required(VERSION 3.9)
project(async VERSION 0.0.1)#$ENV{GITHUB_RUN_NUMBER})

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(lib)
add_subdirectory(src)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT example@example.com)

include(CPack)
